--- a/tests/KdybyTests/nette-reset.neon
+++ b/tests/KdybyTests/nette-reset.neon
@@ -7,6 +7,8 @@ extensions:
 	console: Kdyby\Console\DI\ConsoleExtension
 	annotations: Kdyby\Annotations\DI\AnnotationsExtension
 	doctrine: Kdyby\Doctrine\DI\OrmExtension
+	validator: Kdyby\Validator\DI\ValidatorExtension
+	doctrineForms: Kdyby\DoctrineForms\DI\FormsExtension
 
 
 doctrine:
