--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "kdyby/doctrine-forms",
 	"type": "library",
-	"description": "Forms mapping and validation for Kdyby/Doctrine integration into Nette Framework",
+	"description": "Forms mapping and validation of Doctrine ORM entities for Nette Framework",
 	"keywords": ["nette", "kdyby", "doctrine", "forms", "validation", "mapping"],
 	"homepage": "http://kdyby.org",
 	"license": ["BSD-3-Clause", "GPL-2.0", "GPL-3.0"],
@@ -17,12 +17,16 @@
 	},
 	"require": {
 		"nette/nette": "@dev",
-		"kdyby/doctrine": "~1.0@dev",
+		"doctrine/orm": "~2.4",
+		"kdyby/annotations": "~2.0@dev",
 		"kdyby/validator": "@dev",
 		"symfony/property-access": "~2.3"
 	},
 	"require-dev": {
 		"nette/tester": "@dev"
+	},
+	"suggest": {
+		"kdyby/doctrine": "A powerful integration of Doctrine ORM into Nette Framework"
 	},
 	"conflict": {
 		"kdyby/doctrine": ">=0.10,<1.0"
