Travis: use JakubOnderka/PHP-Parallel-Lint for linting of sources

--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,9 @@
 		"symfony/property-access": "~2.3"
 	},
 	"require-dev": {
+		"kdyby/doctrine": "~1.1@dev",
 		"nette/tester": "@dev",
-		"kdyby/doctrine": "~1.1@dev"
+		"jakub-onderka/php-parallel-lint": "~0.6"
 	},
 	"suggest": {
 		"kdyby/doctrine": "A powerful integration of Doctrine ORM into Nette Framework"
