--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 		"issues": "https://github.com/Kdyby/DoctrineForms/issues"
 	},
 	"require": {
-		"nette/nette": "~2.1@dev",
+		"nette/nette": "2.1.*@dev",
 
 		"doctrine/orm": "~2.4",
 		"kdyby/annotations": "~2.0@dev",
