--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
 
 		"doctrine/orm": "~2.4",
 		"kdyby/annotations": "~2.0@dev",
-		"kdyby/validator": "@dev",
+		"kdyby/validator": "~0.2@dev",
 		"symfony/property-access": "~2.3"
 	},
 	"require-dev": {
@@ -49,7 +49,7 @@
 		"latte/latte": "~2.2@dev",
 		"tracy/tracy": "~2.2@dev",
 
-		"kdyby/doctrine": "~1.1@dev",
+		"kdyby/doctrine": "~2.1@dev",
 		"nette/tester": "@dev",
 		"jakub-onderka/php-parallel-lint": "~0.7"
 	},
