require deps, that require nette 2.1.*

--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,12 @@
 		"nette/nette": "2.1.*@dev",
 
 		"doctrine/orm": "~2.4",
-		"kdyby/annotations": "~2.0@dev",
-		"kdyby/validator": "@dev",
+		"kdyby/annotations": "2.0.*@dev",
+		"kdyby/validator": "0.1.*@dev",
 		"symfony/property-access": "~2.3"
 	},
 	"require-dev": {
-		"kdyby/doctrine": "~1.1@dev",
+		"kdyby/doctrine": "2.0.*@dev",
 		"nette/tester": "@dev",
 		"jakub-onderka/php-parallel-lint": "~0.7"
 	},
