--- a/tests/KdybyTests/nette-reset.neon
+++ b/tests/KdybyTests/nette-reset.neon
@@ -1,36 +1,44 @@
-php:
-	date.timezone: Europe/Prague
+common:
+	php:
+		date.timezone: Europe/Prague
 
 
-extensions:
-	events: Kdyby\Events\DI\EventsExtension
-	console: Kdyby\Console\DI\ConsoleExtension
-	annotations: Kdyby\Annotations\DI\AnnotationsExtension
-	doctrine: Kdyby\Doctrine\DI\OrmExtension
-	validator: Kdyby\Validator\DI\ValidatorExtension
-	translation: Kdyby\Translation\DI\TranslationExtension
-	doctrineForms: Kdyby\DoctrineForms\DI\FormsExtension
+	extensions:
+		events: Kdyby\Events\DI\EventsExtension
+		console: Kdyby\Console\DI\ConsoleExtension
+		annotations: Kdyby\Annotations\DI\AnnotationsExtension
+		doctrine: Kdyby\Doctrine\DI\OrmExtension
+		validator: Kdyby\Validator\DI\ValidatorExtension
+		translation: Kdyby\Translation\DI\TranslationExtension
+		doctrineForms: Kdyby\DoctrineForms\DI\FormsExtension
 
 
-doctrine:
-	metadataCache: array
-	queryCache: array
-	resultCache: array
-	hydrationCache: array
+	doctrine:
+		metadataCache: array
+		queryCache: array
+		resultCache: array
+		hydrationCache: array
 
 
-console:
-	url: http://www.kdyby.org/
+	console:
+		url: http://www.kdyby.org/
 
 
-nette:
-	security:
+	services:
+		cacheStorage:
+			class: Nette\Caching\Storages\MemoryStorage
+
+v22 < common:
+	nette:
+		security:
+			frames: null
+
+		session:
+			autoStart: false
+
+v23 < common:
+	http:
 		frames: null
 
 	session:
 		autoStart: false
-
-
-services:
-	cacheStorage:
-		class: Nette\Caching\Storages\MemoryStorage
